# MovieMania

./: .env.developpment  .gitattributes  .gitignore  CompteRenduReunion180524.md  Dockerfile  LICENCE  LICENSE  MLDMVP.md  README.md  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  requirements.txt  schema_archi.md  tmdb_fetch_history.txt
BDD/: moviadb.sql
Debian/: installation.sh
api_users/: .env.developpment  Dockerfile  docker-compose.override.yaml  docker-compose.yaml
datacrawler/: database.py  datacrawler.py  encoder.py  models.py  schemas.py  test_distance.py
docs/: CompteRenduReunion180524.md  MLD.md  diag.md  diag_flux.md  (+3 more)
users_api/: .dockerignore  .env.developpment  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
users_api/app/: crud.py  main.py  models.py  utils.py
users_api/app/alembic/: env.py
users_api/app/alembic/versions/: 0543ba528003_add_movies_and_genres_tables.py  4c23dd5c88e7_update_models_add_new_fields.py  e2412789c190_init_db.py
users_api/app/api/: main.py
users_api/app/api/routes/: genreusers.py  login.py  medialikes.py  movieusers.py  users.py
users_api/app/core/: config.py  db.py  security.py
users_api/app/email-templates/src/: reset_password.mjml  test_email.mjml
users_api/app/tests/: conftest.py  test_api.py
users_api/app/tests/api/routes/: test_login.py  test_users.py  test_usersgenre.py  test_usersmovie.py
users_api/app/tests/crud/: test_users.py
users_api/app/tests/data/: test.db
users_api/database/: MovieDatabase.sql
(+180 files in other folders)
