[tool.poetry]
name = "app"
version = "0.1.0"
description = "FastAPI Users backend for MovieMania project"
authors = ["Jim <jim.d3v@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = "^0.110.0"
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.6.4"
emails = "^0.6"

gunicorn = "^21.2.0"
Jinja2 = "^3.1.3"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
bcrypt = "^4.1.2"
tenacity = "^8.2.3"
httpx = "^0.27.0"
sqlmodel = "^0.0.20"
mysql-connector-python = "^8.3.0"
fastapi-nextauth-jwt = "^1.1.2"
pytest = "^8.2.2"
werkzeug = "^3.0.3"
alembic = "^1.13.2"
pyjwt = "^2.9.0"

[tool.poetry.group.dev.dependencies]
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240311"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
